--- a/random-walk-coin-toss.Rmd
+++ b/random-walk-coin-toss.Rmd
@@ -7,7 +7,17 @@ output: pdf_document
 
 Explore the probabilities associated with the experiment of tossing a simulated fair coin multiple times.
 
-## 1. Convergence of Probability of Tail to 0.5
+# 1. Convergence of Probability of Tail to 0.5
+
+### a. **We will check that the frequency of "Tails" (outcome equals 1) converges to 0.5 as the number of tosses grows. What does this say about the fairness of the coin?**
+
+Through the axioms of probability and the Equally Likely Rule, we know that the probability of two equally likely mutually exclusive (disjoint) are equivalent and add to 1, therefore each have a probability of 0.5. 
+
+This experiment demonstrates this phenomenon, with our computer-generated pseudo-random simulation of a fair coin. In this case the two equally-likely events are a result of Heads and a result of Tails, each of whose probability is 0.5.
+
+Per the definition of probability and randomness, we also know that in the long run the frequency of the outcome Tails in n empirical trials of this fair coin should converge at 0.5 as n gets larger. Thus we expect the empirical frequency to converge on the theoretical probability of 0.5.
+
+The definition of a fair coin is one one in which both outcomes, Heads and Tails, are equallly likely. Hence by checking that the frequency of Tails converges on 0.5, we are also testing whether our computer-generated coin is fair.
 
 ```{r q1}
 # Seed for reproducibility
@@ -41,35 +51,45 @@ plot(1:4000, freq.tails[1:4000], ylim = c(0.4, 1), type = "l",
 lines(c(0,4000), c(0.5, 0.5))
 ```
 
-# a. 
+### b. **Interpret what you see on the graphs.**
 
-**Does the frequency of Tails converge to 0.5 as the number of tosses grows? What does this say about the fairness of the coin?**
+What we see in the graphs is a behavior in which the trajectory of frequencies jumps up and down erratically as the number of trials is small. The first toss is Tails, so we see a big jump early on. 
 
-Theoretically, we know that in the long run the frequency of the outcome Tails in n trials should converge at 0.5 as n gets larger for a fair coin, with a fair coin being defined as one in which both outcomes, Heads and Tails are equallly likely.
-
-This experiment demonstrates this phenomenon empirically, with our computer-generated pseudo-random simulation of a fair coin.
-
-We know that the "coin" is fair because as the trajectory becomes larger and larger, we can see the frequency of flips with the outcome Tails moving closer and closer to 0.5, the number which represents the probability of rolling Tails when each outcome is equally likely. Thus the empirical frequency is converging on the theoretical probability.
-
-At the 100,000th flip, the tail frequency is `r tail(freq.tails, 1)`.
-
-# b.
-
-**Interpret what you see on the graphs.**
-
-
-
-```{r q1-b}
-# Create a line graph honing in on the next 50000 entries in the tails frequency vector
-plot(4000:54000, freq.tails[4000:54000], ylim = c(0.4, 0.6), type = "l", 
-     ylab = "Frequency of Tails Outcome", xlab = "Sample Length", 
-     main = "Tails Frequency Next 50,000")
-lines(c(4000,54000), c(0.5, 0.5))
+```{r q1b-early}
+(head(freq.tails, 20))
+(max(freq.tails[0:6]))
 ```
 
-## 2. Check Your Intuition About Random Walks
+Then the trajectory demonstrates a slightly larger tendency toward Heads, later again a more pronounced tendency toward Tails.
 
-# 2.1
+```{r q1b-mid}
+(max(freq.tails[20:1000]))
+(min(freq.tails[20:1000]))
+```
+
+All of which simply demonstrates that our random experiment is unpredictable in the short term. However, as the trajectory becomes longer and longer (n becomes larger and larger), we can see the frequency of flips with the outcome Tails moving closer and closer to 0.5, the theoretical probability of getting Tails.
+
+Let's take a closer look at the final 5000 entries:
+
+```{r q1b-zoom}
+# Create a line graph honing in on the next 50000 entries in the tails frequency vector
+plot(50000:100000, freq.tails[50000:100000], ylim = c(0.4, 1), type = "l", 
+     ylab = "Frequency of Tails Outcome", xlab = "Sample Length", 
+     main = "Tails Frequency Final 50,000")
+lines(c(50000, 100000), c(0.5, 0.5))
+
+# And Zoomed In
+plot(50000:100000, freq.tails[50000:100000], ylim = c(0.52, 0.48), type = "l", 
+     ylab = "Frequency of Tails Outcome", xlab = "Sample Length", 
+     main = "Tails Frequency Final 50,000 Zoomed In")
+lines(c(50000, 100000), c(0.5, 0.5))
+```
+
+When we change the scale, we can see that our experiment still varies. But at the original scale the frequency is nearly indistinguishable from a straight line at the 0.5 frequency mark. At the 100,000th flip, the tail frequency is `r tail(freq.tails, 1)`.
+
+# 2. Check Your Intuition About Random Walks
+
+## 2.1 One Trajectory
 
 ```{r q2-1}
 # Seed for reproducibility
@@ -79,13 +99,30 @@ set.seed(12345)
 num.flips <- 1000000
 
 # Create a random sample of num.flips coin flips to simulate a gambling game, where
-#   $1 0 = Heads and 1 = Tails
+#   Heads loses $1 and Tails pays $1
 flips.wealth <- (sample(0:1, num.flips, replace = T) - 0.5) * 2
 (table(flips.wealth))
 
-# Alternate method of producing above sample
+```
+
+### a. **Find at least one alternative way of simulating variable Flips (in my code, flips.wealth).**
+
+```{r q2-1a}
+# This is a transformation of ~ Binom(1, 0.5), so we can also produce the
+#   sample with rbinom()
+set.seed(12345)
+binom.wealth <- rbinom(num.flips, 1, 0.5)
+flips.wealth <- (binom.wealth - 0.5) * 2
+(table(flips.wealth))
+
+# We can also simply hard code our options
 set.seed(12345)
 flips.wealth <- sample(c(-1, 1), size = num.flips, replace = T)
 (table(flips.wealth))
 ```
 
+### b. **Check your intution by answering questions before calculation:**
+
+***How much do you expect the trajectory of wealth to deviate from zero?***
+
+***How long do you expect it to stay on one side above or below zero?***
