--- a/random-walk-coin-toss.Rmd
+++ b/random-walk-coin-toss.Rmd
@@ -9,9 +9,11 @@ output: pdf_document
 options(scipen = 5)
 ```
 
+# Random Walk Experiment
+
 Explore the probabilities associated with the experiment of tossing a simulated fair coin multiple times.
 
-# 1. Convergence of Probability of Tail to 0.5
+## 1. Convergence of Probability of Tail to 0.5
 
 ### a. **We will check that the frequency of "Tails" (outcome equals 1) converges to 0.5 as the number of tosses grows. What does this say about the fairness of the coin?**
 
@@ -89,7 +91,7 @@ lines(c(50000, 100000), c(0.5, 0.5))
 
 When we change the scale, we can see that our experiment still varies and is varying both above and below the 0.5 line. But at the original scale the frequency is nearly indistinguishable from a straight line at the 0.5 frequency mark. At the 100,000th flip, the tail frequency is `r tail(freq.tails, 1)`.
 
-# 2. Check Your Intuition About Random Walks
+## 2. Check Your Intuition About Random Walks
 
 ## 2.1 One Trajectory
 
@@ -200,7 +202,7 @@ So, while our intuition correctly perceived that there would be fluctuations up 
 
 The zoomed charts demonstrate that our fluctuations appear remarkable similar as we zoom in, on scales of 1 million, 300k and only 500 trials.
 
-# 2.2 Multiple Trajectories
+## 2.2 Multiple Trajectories
 
 In our next experiment we look at the probability of our trajectory ending a certain distance from zero.
 
@@ -310,7 +312,7 @@ Our estimate of the number of trajectories within 5 of 0 was roughly accurate, b
 
 Knowing this is a binomial distribution, we could have observed that while a normal distribution is continuous rather than discrete, the shapes and probability densities are similar. This might have given us a better intuitive guess at the second number, especially as we get more accustomed to these distributions.
 
-# 2.3 Time On One Side
+## 2.3 Time On One Side
 
 ### a. **How long do you expect the trajectory of a random walk to spend on one side of zero (below or above)?**
 
@@ -351,16 +353,53 @@ This behavior is known as the arcsine law of random walk theory, which is a spec
 * https://en.wikipedia.org/wiki/Arcsine_distribution
 * https://en.wikipedia.org/wiki/Beta_distribution
 
-# Test: Relationship Between Slope and Correlation
+# Comparison of Correlations
+
+```{r cor-1}
+# Download Week1_Correlation_Comparison_Project_Data.csv sample file to working 
+#   directory of r project to run this code:
+Correlation.Data<-read.csv(file='Week1_Correlation_Comparison_Project_Data.csv',
+                           header=TRUE,sep=",")
+Correlation.Data[1:10,]
+
+# Plot the simulated pairs of samples
+par(mfrow=c(2,2))
+with (Correlation.Data,{ 
+      plot(Case1.X,Case1.Y,ylim=c(-8,8))
+      plot(Case2.X,Case2.Y,ylim=c(-6,6))
+      plot(Case3.X,Case3.Y,ylim=c(-1,3))
+      plot(Case4.X,Case4.Y,ylim=c(0,2.5))
+})
+
+par(mfrow=c(1,1))
+
+# Calculate sample correlations and determination coefficients
+with(Correlation.Data,{
+  Correlation.Case1<-cor(Case1.X,Case1.Y)
+  Correlation.Case2<-cor(Case2.X,Case2.Y)
+  Correlation.Case3<-cor(Case3.X,Case3.Y)
+  Correlation.Case4<-cor(Case4.X,Case4.Y)
+  rbind(cbind(Correlation.Case1,Correlation.Case2,Correlation.Case3,Correlation.Case4),
+        cbind(Correlation.Case1^2,Correlation.Case2^2,Correlation.Case3^2,Correlation.Case4^2))
+})
+```
+
+
+## Test: Relationship Between Slope and Correlation
 
 ```{r Test}
-# Read sample data. Store sample.csv in working directory of project.
+# Read sample data. Store sample.csv in working directory of project
 sample <- read.table('sample.csv', header = T)
 
+# Calculate measurements
 (sd.X <- sd(sample$x))
 (sd.Y <- sd(sample$y))
 (cor.XY <- cor(sample$x, sample$y))
 (cov.XY <- cov(sample$x, sample$y))
 (a <- cov.XY / (sd.X)^2)
+
+# Write result to file in working directory of project
+result <- data.frame(sdX=sd.X, sdY=sd.Y, cXY=cor.XY, a=a)
+write.table(result, "result.csv", row.names = F)
 ```
 
